--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        <h1>World of Warcraft Item Tracker</h1>
-    </body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    <div class="index">
+        <h1>World of Warcraft Item Tracker Home Page</h1>
+        <p>Homepage, click on button below to see the Best-In-Slot for each class and specialization.</p>
+        <br />
+    </div>
+    <div>
+        <h2>About Me</h2>
+    </div>
+{% endblock %}
