BIS display based on logged in user

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
                     <a class='active' href="{{ url_for('index') }}">Home</a>
                     <a href="{{ url_for('bis') }}">Best in Slot</a>
                     <a href="{{ url_for('farm') }}">Farming</a>
+                    <a href="{{ url_for('login') }}">Login</a>
                 </nav></strong>
             </div>
         </header>
