move folder structure around

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "./layout.html" %}
 {% block content %}
     <div class="index">
         <h1>World of Warcraft Item Tracker Home Page</h1>
